Expose OSDU storage record system fields
